Revert "Thêm chức năng của Nhu"

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -86,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
-        android:text="@string/doc_bao"
+        android:text="@string/the_guardian"
         android:textSize="45sp"
         android:textStyle="bold" />
 
