--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?><!--
   ~ MIT License
   ~
-  ~
+  ~ Copyright (c) 2018 Soojeong Shin
   ~
   ~ Permission is hereby granted, free of charge, to any person obtaining a copy
   ~ of this software and associated documentation files (the "Software"), to deal
@@ -30,50 +30,10 @@
         android:id="@+id/menu_navigation"
         android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_new"
+            android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_home"
-            android:title="@string/ic_title_new" />
+            android:title="@string/ic_title_home" />
         <item
-            android:id="@+id/nav_highlight"
-            android:icon="@drawable/ic_menu_world"
-            android:title="@string/ic_title_highlight" />
-        <item
-            android:id="@+id/nav_newsTime"
-            android:icon="@drawable/ic_menu_business"
-            android:title="@string/ic_title_newsTime" />
-        <item
-            android:id="@+id/nav_footballVN"
-            android:icon="@drawable/ic_menu_culture"
-            android:title="@string/ic_title_footballVN" />
-        <item
-            android:id="@+id/nav_footballInter"
-            android:icon="@drawable/ic_menu_environment"
-            android:title="@string/ic_title_footballInter" />
-        <item
-            android:id="@+id/nav_entertainment"
-            android:icon="@drawable/ic_menu_business"
-            android:title="@string/ic_title_entertainment" />
-        <item
-            android:id="@+id/nav_world"
-            android:icon="@drawable/ic_menu_fashion"
-            android:title="@string/ic_title_world" />
-        <item
-            android:id="@+id/nav_law"
-            android:icon="@drawable/ic_menu_sport"
-            android:title="@string/ic_title_law" />
-        <item
-            android:id="@+id/nav_technology"
-            android:icon="@drawable/ic_menu_world"
-            android:title="@string/ic_title_technology" />
-        <item
-            android:id="@+id/nav_cuisine"
-            android:icon="@drawable/ic_menu_science"
-            android:title="@string/ic_title_cuisine" />
-        <item
-            android:id="@+id/nav_travel"
-            android:icon="@drawable/ic_menu_society"
-            android:title="@string/ic_title_travel" />
-      <item
             android:id="@+id/nav_category"
             android:icon="@drawable/ic_menu_world"
             android:title="@string/ic_title_category" />
