--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -76,7 +76,7 @@
       <item
             android:id="@+id/nav_category"
             android:icon="@drawable/ic_menu_world"
-            android:title="@string/ic_title_category" />
+            android:title="@string/label_category" />
         <item
             android:id="@+id/nav_weather"
             android:icon="@drawable/ic_weather_24"
