--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,7 @@
     <color name="colorPrimary">#005689</color>
     <color name="colorPrimaryDark">#005689</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorTransparent">#01000000</color>
 
     <color name="swipe_color_1">#4CAF50</color>
     <color name="swipe_color_2">#03A9F4</color>
