--- a/app/src/main/res/layout/activity_read_news.xml
+++ b/app/src/main/res/layout/activity_read_news.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".ReadNewsActivity">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/like_button"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/layout_margin"
+        android:backgroundTint="@color/white"
+        android:tint="@color/colorPrimary"
+        app:borderWidth="0dp"
+        android:src="@drawable/ic_favorite_border_24"
+        app:layout_constraintBottom_toTopOf="@+id/comment_button"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/comment_button"
