--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -81,15 +81,15 @@
             android:id="@+id/nav_weather"
             android:icon="@drawable/ic_weather_24"
             android:title="@string/label_weather" />
-        <item
-            android:id="@+id/nav_stock"
-            android:icon="@drawable/ic_stock_24"
-            android:title="@string/label_stock" />
     </group>
     <group
         android:id="@+id/menu_auth"
         android:checkableBehavior="single"
         android:visible="false">
+        <item
+            android:id="@+id/nav_favorite"
+            android:icon="@drawable/ic_favorite_24"
+            android:title="@string/label_favorite" />
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_logout_24"
